--- a/src/app/call/call-history/call-history.component.html
+++ b/src/app/call/call-history/call-history.component.html
@@ -97,8 +97,9 @@
                                 <th>Phone number</th>
                                 <th>Call Type</th>
                                 <th>Notes</th>
-                                <th>WrapUp Category</th>
+                                <th>TYPE</th>
                                 <th>WrapUp Code</th>
+                                <th>TYPE APPELLANT</th>
                                 <th>Queue Name</th>
                                 <th>Call time</th>
                                 <!-- <th>Call Unique ID</th> -->
@@ -119,6 +120,7 @@
                                  </td>
                                 <td>{{history.category_name}}</td>
                                 <td>{{history.auxcode_name}}</td>
+                                <td>{{history.type_appellant}}</td>
                                 <td>{{history.queue_names}}</td>                               
                                 <td>{{history.call_start_dt}}</td>                                       
                                 <td>{{history.call_id_3cx}}</td>
