--- a/src/app/add-contacts/add-contacts.component.html
+++ b/src/app/add-contacts/add-contacts.component.html
@@ -475,6 +475,12 @@
 										<input type="text" id="twitter"  class="form-control" formControlName="twitter" >
 									</div>
 								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="twitter">Agence</label>
+										<input type="text" id="twitter"  class="form-control" formControlName="twitter" >
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
