--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
         <!-- <li><a href="javascript:void(0)" class="nav-link nav-link-lg">
           <span class="available presence"></span>
         </a></li> -->
-        
+        <div id="google_translate_element"></div>
 
       </ul>
     </div>
