--- a/src/app/aux-code/aux-code.component.html
+++ b/src/app/aux-code/aux-code.component.html
@@ -21,7 +21,7 @@
                             <tr>
                                 <th>#</th>
                                 <!-- <th>Wrap Up ID</th> -->
-                                <th>Wrap Up Category</th>
+                                <th>Type</th>
                                 <th>Wrap Up Code</th>
                                 <th>Action</th>
                             </tr>
@@ -286,7 +286,7 @@
                             <tr>
                                 <th># </th>
                                 <!-- <th>Catagory ID</th> -->
-                                <th>Catagory Name</th>
+                                <th>Tpye</th>
                                 <th>Department</th>
                                 <th>Action</th>
                             </tr>
