--- a/src/app/aux-code/aux-code.component.html
+++ b/src/app/aux-code/aux-code.component.html
@@ -22,7 +22,7 @@
                                 <th>#</th>
                                 <!-- <th>Wrap Up ID</th> -->
                                 <th>Type</th>
-                                <th>Wrap Up Code</th>
+                                <th>Code</th>
                                 <th>Action</th>
                             </tr>
 
@@ -105,7 +105,7 @@
 
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="department_name">Wrap Up Code <span style="color: brown;font-size: 12px;"> (By click <b>Enter </b> Add multiple Codes) </span></label>
+                                <label for="department_name">Code <span style="color: brown;font-size: 12px;"> (By click <b>Enter </b> Add multiple Codes) </span></label>
                                 <!-- <input type="text" id="department_name" class="form-control"
                                     formControlName="department_name"> -->
 
