--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
           <span class="available presence"></span>
         </a></li> -->
         
-        <div id="google_translate_element"></div>
+        <div id="google_translate_element" style="position:left;border-left: 113px"></div>
       </ul>
     </div>
     <ul class="navbar-nav navbar-right">
