--- a/src/app/whatsapp-unoff/whatsapp-unoff.component.html
+++ b/src/app/whatsapp-unoff/whatsapp-unoff.component.html
@@ -131,7 +131,8 @@
          <div class="chat-item chat-left" *ngIf="chat_details.msg_user_type == 'customer'"><img src="{{chat_details.customer_image}}"  onerror="this.src='assets/images/user.jpg'" alt="avatar">
            <div class="chat-details">
             <div *ngIf="isthisgroup">{{chat_details.group_sender_name}}</div>    
-             <div class="chat-text" style="white-space: pre-line;"> <div *ngIf="chat_details.whatsapp_media_url" style="max-width: 650px;"><a target="_blank" href="{{chat_details.whatsapp_media_url}}"><img  href="{{chat_details.whatsapp_media_url}}" src="{{chat_details.whatsapp_media_url}}" onerror=" this.src='assets/images/icons/quickView.png'"></a></div>{{chat_details.chat_msg}}</div>
+             <!-- <div class="chat-text" style="white-space: pre-line;"> <div *ngIf="chat_details.whatsapp_media_url" style="max-width: 650px;"><a target="_blank" href="{{chat_details.whatsapp_media_url}}"><img  href="{{chat_details.whatsapp_media_url}}" src="{{chat_details.whatsapp_media_url}}" onerror=" this.src='assets/images/icons/quickView.png'"></a></div>{{chat_details.chat_msg}}</div> -->
+             <div class="chat-text" style="white-space: pre-line;"> <div *ngIf="chat_details.whatsapp_media_url" style="max-width: 650px;"><a target="_blank" href="{{chat_details.whatsapp_media_url}}"><img  href="{{chat_details.whatsapp_media_url}}" src="{{chat_details.whatsapp_media_url}}" onerror=" this.src='assets/images/icons/Whatsappvoice.png'"></a></div>{{chat_details.chat_msg}}</div>
              <div class="chat-time">{{chat_details.chat_dt}}   {{chat_details.chat_time}}</div>
              <!-- <div class="chat-time">{{chat_details.chat_dt}}</div> -->
            </div>
