--- a/src/app/edit-contact-dup/edit-contact-dup.component.html
+++ b/src/app/edit-contact-dup/edit-contact-dup.component.html
@@ -491,6 +491,21 @@
 											<label for="twitter">Expiry Date</label>
 											<input type="text"id="dup_twitter"  class="form-control" formControlName="twitter" >
 										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label for="twitter">Agence</label>
+												<input type="text" id="dup_twitter"  class="form-control" formControlName="twitter" >
+		
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label for="other_street">Connaissance Baobab</label>
+												<input type="text" id="dup_other_street" class="form-control" formControlName="other_street" >
+											</div>
+									</div>
+									<div class="buttons">
+										<input type="button" class="btn btn-primary" value="Save Changes" type="submit">
 									</div>
 								</div>
 							</div>
@@ -676,9 +691,9 @@
 									</div>
 								</div> -->
 								<!-- <br /> -->
-								<div class="buttons">
+								<!-- <div class="buttons">
 									<input type="button" class="btn btn-primary" value="Save Changes" type="submit">
-								</div>
+								</div> -->
 							<!-- </div>
 						</div>
 					</div>
