--- a/src/app/add-contacts/add-contacts.component.html
+++ b/src/app/add-contacts/add-contacts.component.html
@@ -480,6 +480,12 @@
 										<label for="twitter">Agence</label>
 										<input type="text" id="twitter"  class="form-control" formControlName="twitter" >
 									</div>
+									<div class="col-md-6">
+										<div class="form-group">
+											<label for="other_street">Connaissance Baobab</label>
+											<input type="text" id="other_street" class="form-control" formControlName="other_street" >
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
