--- a/src/app/edit-contacts/edit-contacts.component.html
+++ b/src/app/edit-contacts/edit-contacts.component.html
@@ -492,6 +492,19 @@
 											<input type="text" id="twitter"  class="form-control" formControlName="twitter" >
 										</div>
 									</div>
+									<div class="col-md-6">
+										<div class="form-group">
+											<label for="twitter">Agence</label>
+											<input type="text" id="twitter"  class="form-control" formControlName="twitter" >
+	
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="form-group">
+											<label for="other_street">Connaissance Baobab</label>
+											<input type="text" id="other_street" class="form-control" formControlName="other_street" >
+										</div>
+									</div>
 									<div class="buttons">
 										<input type="button" class="btn btn-primary" value="Save Changes" type="submit">
 									</div>
