--- a/src/app/call/call-history/call-history.component.html
+++ b/src/app/call/call-history/call-history.component.html
@@ -118,9 +118,9 @@
                             </tr>
                             <tr *ngFor="let history of call_history_list;let i=index" >
                                 <td>{{offset_count+i+1}}</td>
-                                <td>{{history.call_start_dt}}</td>  
+                                <td>{{history.call_start_dt| date: 'dd/MM/yyyy'}}</td>  
                                 <td>{{history.agence}}</td>
-                                <td>{{history.hour}}</td>
+                                <td>{{history.call_start_dt| date: 'hh:mm:ss'}}</td>
                                 <td>{{history.agent_name}}</td>
                                 <td>{{history.first_name}}</td>
                                 <td>{{history.call_data}}</td>
