--- a/src/app/call/call-history/call-history.component.html
+++ b/src/app/call/call-history/call-history.component.html
@@ -120,7 +120,7 @@
                                 <td>{{offset_count+i+1}}</td>
                                 <td>{{history.call_start_dt| date: 'dd/MM/yyyy'}}</td>  
                                 <td>{{history.agence}}</td>
-                                <td>{{history.call_start_dt| date: 'hh:mm:ss'}}</td>
+                                <td>{{history.call_start_dt| date: 'h:MM:ss'}}</td>
                                 <td>{{history.agent_name}}</td>
                                 <td>{{history.first_name}}</td>
                                 <td>{{history.call_data}}</td>
