--- a/src/app/email-settings/email-settings.component.html
+++ b/src/app/email-settings/email-settings.component.html
@@ -1,34 +1,34 @@
 <div class="card padding-15" >
 	<div class="row">
 	  <div class="col-md-9">
-		<a routerLink="/ticketing-system-new" href="#" class="badge badge-success mr-2">
+		<a routerLink="/ticketing-system-new" href="#" class="text-white badge badge-success mr-2">
 		  <span class="icon">
 			<i class="fas fa-ticket-alt"></i>
 		  </span>
 		  &nbsp; My Tickets
 		</a>
-		<a href="#" routerLink="/unassinged-tickets" class="badge badge-warning mr-2">
+		<a href="#" routerLink="/unassinged-tickets" class="text-white badge badge-warning mr-2">
 		  <span class="icon">
 			<i class="fas fa-ticket-alt"></i>
 		  </span>
 		  &nbsp; Queue Tickets
 		</a>
 
-		<a *ngIf="user_type==2" href="#" routerLink="/ticket-template" class="badge badge-primary mr-2">
+		<a *ngIf="user_type==2" href="#" routerLink="/ticket-template" class="text-white badge badge-primary mr-2">
 		  <span class="icon">
 			<i class="fas fa-palette"></i>
 		  </span>
 		  &nbsp; Templates
 		</a>
 
-		<a *ngIf="user_type==2" routerLink="/email-settings" class="badge badge-info mr-2 pointer-event-none">
+		<a *ngIf="user_type==2" routerLink="/email-settings" class="text-white badge badge-info mr-2 pointer-event-none">
 		  <span class="icon">
 			<i class="fas fa-cog"></i>
 		  </span>
 		  &nbsp; Settings
 		</a>
 
-		<a *ngIf="user_type==2" href="#" routerLink="/spam-list" class="badge badge-danger mr-2">
+		<a *ngIf="user_type==2" href="#" routerLink="/spam-list" class="text-white badge badge-danger mr-2">
 		  <span class="icon">
 			<i class="fas fa-user-times"></i>
 		  </span>
