--- a/src/app/queue/queue.component.html
+++ b/src/app/queue/queue.component.html
@@ -7,7 +7,7 @@
                     <div class="addBtn">
                         <button type="button" class="btn btn-primary" (click)="addQueue()">+ Add Queue</button>
                     </div>
-                    <a (click)="showdoc('https://uatassaabloyccapi.mconnectapps.com/api/v1.0/pro_contents/pro_queue.pdf')"  target="_blank"><i style="font-size: 24px;
+                    <a (click)="showdoc('https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_queue.pdf')"  target="_blank"><i style="font-size: 24px;
                         float: right;" class="fa fa-question-circle"></i></a>
 					<!-- <a style="margin-left: 20px;" href="https://uatassaabloyccapi.mconnectapps.com/api/v1.0/pro_contents/pro_queue.pdf" target="_blank"><i style="font-size:24px;" class="fa fa-exclamation-circle"></i></a> -->
 
