--- a/src/app/queue-management/queue-management.component.html
+++ b/src/app/queue-management/queue-management.component.html
@@ -11,7 +11,7 @@
                         <input type="hidden" value="" id="datagetsfailed" (click)="datagetsfailed()">
 
                     </div>
-					<a style="margin-left: 20px;" href="https://uatassaabloyccapi.mconnectapps.com/api/v1.0/pro_contents/pro_queue.pdf" target="_blank"><i style="font-size:24px;" class="fa fa-exclamation-circle"></i></a>
+					<a style="margin-left: 20px;" href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_queue.pdf" target="_blank"><i style="font-size:24px;" class="fa fa-exclamation-circle"></i></a>
 
                 </div>
                 <div class="card-body p-0">
