--- a/src/app/edit-contacts/edit-contacts.component.html
+++ b/src/app/edit-contacts/edit-contacts.component.html
@@ -97,7 +97,7 @@
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="last_name">Last Name</label>
-											<input type="text" id="last_name" class="form-control" formControlName="last_name" >
+											<input type="text"  id="mailing_province" class="form-control" formControlName="mailing_province" >
 										</div>
 									</div>
 	
@@ -453,7 +453,7 @@
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="email_opt">Blacklisted</label>
-											<input type="text" name="email_opt" class="form-control">
+											<input type="text"  id="mailing_city" class="form-control" formControlName="mailing_city" >
 										</div>
 									</div>
 	
