--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -3,7 +3,7 @@
 		<div class="card-header">
 			<h4>Notes</h4>
 			<div class="addBtn">
-				<button class="btn btn-primary" (click)="bcktoContc(this.contact_id,this.phone_num)" style="float: right;">Overview</button> </div>
+				<button class="btn btn-primary" (click)="bcktoContc()" style="float: right;">Overview</button> </div>
 				<!-- <button class="btn btn-primary"(click)="generate_ticket(this.email_id)"style="float: right;">Generate Ticket</button>  -->
 			</div>
 		</div> 
