--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
           <span class="available presence"></span>
         </a></li> -->
         
-        <div id="google_translate_element" style="position:left;border-left: 113px"></div>
+
       </ul>
     </div>
     <ul class="navbar-nav navbar-right">
@@ -210,7 +210,7 @@
   </li>
 
   <!-- <li routerLinkActive="active" *ngIf="this.userID == '64'"><a href="javascript:void(0)" class="nav-link" routerLink="/social-publish" ><i class="fa fa-chevron-circle-right"></i><span>Social Marketing</span></a></li> -->
-  <li *ngIf="e_tic && this.close_all_menu != 'close'"><a href="javascript:void(0)" class="nav-link" routerLink="/email-dashboard"><i class="fas fa-ticket-alt"></i><span>Email Ticketing</span></a></li>
+  <li *ngIf="e_tic && this.close_all_menu != 'close'"><a href="javascript:void(0)" class="nav-link" routerLink="/email-dashboard"><i class="fas fa-ticket-alt"></i><span>Tickets</span></a></li>
 
   <!-- <li class="dropdown {{this.h_ticket}}"  *ngIf="this.close_all_menu != 'close'" >
     <a href="javascript:void(0)" class="nav-link has-dropdown"><i class="fas fa-envelope-open-text"></i><span>Email</span></a>
