--- a/src/app/edit-contact-dup/edit-contact-dup.component.html
+++ b/src/app/edit-contact-dup/edit-contact-dup.component.html
@@ -1,6 +1,16 @@
 <div class="section-body edit-form">
+	<div style="margin-left: 27px;" class="card">
+		<div class="card-header">
+			<h4><i class="fa fa-address-book" aria-hidden="true"></i>
+				Edit Contacts</h4>
+			<div class="addBtn">
+				 <button class="btn btn-primary" (click)="addNotes(this.contact_id)"  style="float: right;"> Activities</button>
+			 </div> 
+			<!-- <p>Contact</p> -->
 
-	<div class="card">
+		</div>
+	</div>
+	<!-- <div class="card">
 			<div class="card-header">
 				<h4><i class="fa fa-address-book" aria-hidden="true"></i>
 					Edit Contacts</h4>
@@ -8,7 +18,7 @@
 					 <button class="btn btn-primary" (click)="addNotes(this.contact_id)"  style="float: right;"> Activities</button>
 				 </div> 
 			</div>
-			</div>
+			</div> -->
 			<form [formGroup]="editContact" (ngSubmit)="updateContact(this.contact_id)" *ngIf="alladmin">
 	
 			<!-- <div class="row">
