--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,7 +15,7 @@
       </ul>
     </div>
     <ul class="navbar-nav navbar-right">
-      <div  id="google_translate_element" style="position:left;border-left: 113px"></div>
+      <div id="google_translate_element" ></div>
       <li class="allow-calls" style="padding: 6px 0 0 0;">
             <!-- <div class="pretty p-switch p-fill">
                 <input type="checkbox" id="incoming_call_request" onclick="changeIncomingCall(this)" checked />
