--- a/src/app/ticket-signature/ticket-signature.component.html
+++ b/src/app/ticket-signature/ticket-signature.component.html
@@ -166,6 +166,7 @@
                                     <td>
                                         <span class="user-icon" style="cursor: point\er;"><i class="far fa-edit"
                                                 (click)="editsignpopup(queue.sig_id)"></i></span>
+                                                <span class="user-icon" style="cursor: pointer;"><i class="far fa-trash-alt" (click)="deletedata(queue.sig_id)"></i></span>
                                     </td>
                                     <!-- <td>
                                 <span class="user-icon" style="cursor: pointer;"><i class="far fa-trash-alt" (click)="deletedata(queue.sig_id)"></i></span>
