--- a/src/app/edit-contact-dup/edit-contact-dup.component.html
+++ b/src/app/edit-contact-dup/edit-contact-dup.component.html
@@ -115,6 +115,7 @@
 										<div class="form-group">
 											<label for="email">Email Address</label>
 											<input type="text"id="dup_email"  class="form-control" formControlName="email" >
+											<label class="error-message message-small" *ngIf="!editContact.get('email').valid && editContact.get('email').touched ">Please enter the valid email id</label>
 										</div>
 									</div>
 									<div class="col-md-6">
@@ -152,6 +153,7 @@
 										<div class="form-group">
 											<label for="mobile">Other Phone #</label>
 											<input type="text"id="dup_mobile"  class="form-control" formControlName="mobile" >
+											<label class="error-message message-small" *ngIf="!editContact.get('mobile').valid && editContact.get('mobile').touched ">Please enter the number</label>
 										</div>
 									</div>
 	
